# First_PJT

./: .gitignore  PR_DESCRIPTION.md  README.md  check_status.bat  docker-compose.yml  run_local.bat
backend/: .env  .env.example  .gitignore  README.md  alembic.ini  api_test_log copy.md  api_test_log.md  pyproject.toml  requirements.txt
backend/.pipeline/: state.json
backend/alembic/: env.py
backend/alembic/versions/: 2b423957f08f_add_composite_indexes_to_inventory_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  query_analyzer.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/middleware/: __init__.py  logging_middleware.py  request_id.py
backend/app/models/: category.py  product.py  stock.py  store.py  transaction.py  user.py  user_store.py
backend/app/schemas/: admin.py  category.py  common.py  inventory.py  product.py  store.py  sync.py  transaction.py  user.py
backend/app/services/: inventory.py  product.py  report.py  sync.py
backend/docs/: 2025-12-31_setup.md  2026-01-02_study-team-guide.md  2026-01-02_technical-glossary.md  DOMAIN_DOCUMENTATION.md  db-sample.sql  erd.md  tech-spec.md
backend/docs/agent/: phase3_product_api_task.md  phase4_inventory_api_task.md  phase5_transaction_api_task.md  phase6_sync_api_task.md  phase7_store_admin_api_task.md  phase8_e2e_test_task.md
backend/docs/api/: CHANGELOG.md  openapi.json
backend/docs/diagrams/: 00-system-overview.md  01-auth-flow.md  02-product-flow.md  03-inventory-flow.md  04-transaction-flow.md  05-sync-flow.md  06-admin-flow.md
backend/docs/implementation/: 2026-01-24_phase-a_implementation-plan.md  2026-01-25_phase-c-1_exception_handling.md
backend/docs/implemented/: 2026-01-10_phase3_product_api.md  2026-01-10_phase4_inventory_api.md  2026-01-10_phase5_transaction_api.md  2026-01-10_phase6_sync_api.md  2026-01-10_phase7_store_admin_api.md  2026-01-10_phase8_e2e_test.md  (+4 more)
backend/init-db/: 01-schema.sql  02-sample-data.sql
backend/postman/: README.md
backend/scripts/: db-start.bat  db-start.sh  db-stop.bat  db-stop.sh  dev-server.bat  dev-server.sh  generate-openapi.py  generate_api_report.py  install_dependencies.ps1  run_api_test.ps1  seed_db.py
backend/tests/: conftest.py  test_admin.py  test_e2e.py  test_inventory.py  test_models.py  test_products.py  test_schemas.py  test_sync.py  test_transactions.py
(+227 files in other folders)
