[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "black==24.1.1",
    "email-validator==2.3.0",
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "openpyxl==3.1.5",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
]

[dependency-groups]
dev = [
    "black>=24.1.1",
    "httpx>=0.26.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]
